objects/LLC_BI__Ownership_Structure_Role__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is required to activate an ownership structure role. Ownership structure roles define individual or business ownership of a deposit account. This flag to be set if role is currently used.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Authorized_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field to indicate if a business relationship with this Ownership Structure role is authorized to authorize an individual or another business relationship as an authorized role. By default, it is false.</description>
        <inlineHelpText>Select this field when this Ownership Structure role is for an authorized business.</inlineHelpText>
        <label>Is Authorized Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Authorized_Signer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field to indicate if an individual relationship with this Ownership Structure role is authorized to transact on a particular product on behalf of a legal entity. By default, it is false.</description>
        <inlineHelpText>Select this field when this Ownership Structure role is for an authorized signer.</inlineHelpText>
        <label>Is Authorized Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is required to indicate if an ownership structure role is required. Requiring ownership structure roles enforces that role be assigned to a desposit account during the New Deposit Workflow. This flag is to be set if role is required for ownership structure type.</description>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership_Structure_Type__c</fullName>
        <description>This field is required when configuring deposit ownership structures for the New Deposit Workflow. It assocaites an ownership structure role to a ownership structure type.</description>
        <label>Ownership Structure Type</label>
        <referenceTo>LLC_BI__Ownership_Structure_Type__c</referenceTo>
        <relationshipLabel>Ownership Structure Roles</relationshipLabel>
        <relationshipName>Ownership_Structure_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Type__c</fullName>
        <description>This field is required and must be set during configuration of Ownership Structure Roles. This field is used to indicate the role a relationship plays for a deposit account. It is also used to set the Ownership Type field on the Entity Involvement record, linking the deposit to the relationship.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ownership Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Role_Description__c</fullName>
        <description>This field is optional and is manually entered during ownership structure configuration. This field is used to capture a description of the ownership structure role.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Description</label>
        <type>TextArea</type>
    </fields>
    <label>Ownership Structure Role</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Ownership Structure Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ownership Structure Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>